Update CatWAF
